fix: tiny fields on mobile on profile edition

--- a/resources/css/layouts/_profile-page.scss
+++ b/resources/css/layouts/_profile-page.scss
@@ -15,3 +15,15 @@
 .profile-topbar .user-name {
     margin: 0 0 0.6rem 0;
 }
+
+@media screen and (max-width: 500px) {
+    .profile-edit-row {
+        flex-direction: column;
+        gap: 30px!important;
+        margin: 1.5rem 0;
+    }
+
+    .profile-edit-row .field {
+        margin: 0;
+    }
+}
